unit testes, ajuste de rotas e swagger
